--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-static": "^3.0.4",
 		"convert-csv-to-json": "^2.49.0",
 		"csv-parse": "^5.5.6",
 		"ts-node": "^10.9.2"
