--- a/package.json
+++ b/package.json
@@ -30,13 +30,12 @@
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.0.3",
-		"vitest": "^2.0.0"
+		"vitest": "^2.0.0",
+		"@sveltejs/adapter-static": "^3.0.4",
+		"csv-parse": "^5.5.6",
+		"ts-node": "^10.9.2"
 	},
 	"type": "module",
 	"dependencies": {
-		"@sveltejs/adapter-static": "^3.0.4",
-		"convert-csv-to-json": "^2.49.0",
-		"csv-parse": "^5.5.6",
-		"ts-node": "^10.9.2"
 	}
 }
