--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-static": "^3.0.4",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^9.6.0",
@@ -29,13 +30,11 @@
 		"svelte-check": "^4.0.0",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
-		"vite": "^5.0.3",
+		"vite": "^5.3.5",
 		"vitest": "^2.0.0",
-		"@sveltejs/adapter-static": "^3.0.4",
 		"csv-parse": "^5.5.6",
 		"ts-node": "^10.9.2"
 	},
 	"type": "module",
-	"dependencies": {
-	}
+	"dependencies": {}
 }
