--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^9.6.0",
+		"@types/leaflet": "^1.9.12",
+		"csv-parse": "^5.5.6",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.36.0",
@@ -28,13 +30,15 @@
 		"prettier-plugin-svelte": "^3.1.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
+		"ts-node": "^10.9.2",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
 		"vite": "^5.3.5",
-		"vitest": "^2.0.0",
-		"csv-parse": "^5.5.6",
-		"ts-node": "^10.9.2"
+		"vitest": "^2.0.0"
 	},
 	"type": "module",
-	"dependencies": {}
+	"dependencies": {
+		"@types/geojson": "^7946.0.14",
+		"leaflet": "^1.9.4"
+	}
 }
