--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@functions/*": ["src/functions/*"],
-      "@libs/*": ["src/libs/*"]
+      "@libs/*": ["src/libs/*"],
+      "@components/*": ["src/components/*"]
     }
   }
 }
