--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^9.6.0",
 		"@types/leaflet": "^1.9.12",
+		"autoprefixer": "^10.4.20",
 		"csv-parse": "^5.5.6",
 		"eslint": "^9.0.0",
 		"eslint-config-prettier": "^9.1.0",
@@ -29,8 +30,10 @@
 		"globals": "^15.0.0",
 		"prettier": "^3.1.1",
 		"prettier-plugin-svelte": "^3.1.2",
+		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
+		"tailwindcss": "^3.4.9",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.0.0",
 		"typescript-eslint": "^8.0.0",
@@ -40,6 +43,10 @@
 	"type": "module",
 	"dependencies": {
 		"@types/geojson": "^7946.0.14",
-		"leaflet": "^1.9.4"
+		"bits-ui": "^0.21.16",
+		"clsx": "^2.1.1",
+		"leaflet": "^1.9.4",
+		"tailwind-merge": "^2.5.3",
+		"tailwind-variants": "^0.2.1"
 	}
 }
